--- a/pkgIndex.tcl.in
+++ b/pkgIndex.tcl.in
@@ -3,3 +3,4 @@
 #
 package ifneeded @PACKAGE_NAME@ @PACKAGE_VERSION@ \
     [list load [file join $dir @PKG_LIB_FILE@] @PACKAGE_NAME@]
+package provide @PACKAGE_NAME@ @PACKAGE_VERSION@
