--- a/win/makefile.vc
+++ b/win/makefile.vc
@@ -1,37 +1,57 @@
 #------------------------------------------------------------- -*- makefile -*-
 #
-# Makefile for tclcompiler
+# makefile for tbcx
 #
 # Basic build, test and install
-#   nmake /f makefile.vc INSTALLDIR=c:\tcl TCLDIR=c:\path\to\tcl\source
-#   nmake /f makefile.vc INSTALLDIR=c:\tcl TCLDIR=c:\path\to\tcl\source
-#   nmake /f makefile.vc INSTALLDIR=c:\tcl TCLDIR=c:\path\to\tcl\source install
+#   nmake /f makefile.vc INSTALLDIR=c:\path\to\tcl
+#   nmake /f makefile.vc INSTALLDIR=c:\path\to\tcl test
+#   nmake /f makefile.vc INSTALLDIR=c:\path\to\tcl install
 #
 # For other build options (debug, static etc.),
-# See TIP 477 (https://core.tcl.tk/tips/doc/trunk/tip/477.md) for
+# See TIP 477 (https://core.tcl-lang.org/tips/doc/main/tip/477.md) for
 # detailed documentation.
 #
-# See the file "LICENSE" for information on usage and redistribution
+# See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-PROJECT = tbcx
-NEED_TCL_SOURCE=1
+#------------------------------------------------------------------------------
 
+# The name of the package
+PROJECT = tbcx
+RCFILE  = tbcx.rc
 !include "rules-ext.vc"
 
-PRJ_OBJS = \
-	$(TMP_DIR)\tbcx.obj  \
-	$(TMP_DIR)\tbcxsave.obj  \
-	$(TMP_DIR)\tbcxload.obj  \
-	$(TMP_DIR)\tbcxdump.obj
+# Define the object files and resource file that make up the extension.
+# Note the resource file does not makes sense if doing a static library build
+# hence it is under that condition. TMP_DIR is the output directory
+# defined by rules for object files.
+PRJ_OBJS = $(TMP_DIR)\tbcx.obj $(TMP_DIR)\tbcxsave.obj $(TMP_DIR)\tbcxload.obj $(TMP_DIR)\tbcxdump.obj
+PRJ_HEADERS = $(ROOT)\tbcx.h
 
-PRJ_HEADERS = \
-	$(ROOT)\tbcx.h
+PRJ_DEFINES = /D_CRT_SECURE_NO_DEPRECATE /D_CRT_NONSTDC_NO_DEPRECATE
+PRJ_DEFINES = $(PRJ_DEFINES) /D_CRT_SECURE_NO_WARNINGS
+PRJ_DEFINES = $(PRJ_DEFINES) $(ADDOPTDEFINES) -I$(TMP_DIR)
+PRJ_LIBS = $(ADDLINKOPTS)
 
-PRJ_DEFINES = -D_CRT_SECURE_NO_WARNINGS -DTCL_NO_DEPRECATED
-
+# Define the standard targets
 !include "$(_RULESDIR)\targets.vc"
 
-pkgindex: default-pkgindex-tea
+# We must define a pkgindex target that will create a pkgIndex.tcl
+# file in the $(OUT_DIR) directory. We can just redirect to the
+# default-pkgindex target for our extension.
+pkgindex:
+	@echo package ifneeded $(PRJ_PACKAGE_TCLNAME) $(DOTVERSION) \
+	    [list load [file join $$dir $(PRJLIBNAME9)] $(PRJ_PACKAGE_TCLNAME)] > $(OUT_DIR)\pkgIndex.tcl
 
-$(PRJ_OBJS): $(ROOT)\configure.ac $(PRJ_HEADERS)
+$(ROOT)\manifest.uuid:
+   copy $(WIN_DIR)\gitmanifest.in $(ROOT)\manifest.uuid
+   git rev-parse HEAD >>$(ROOT)\manifest.uuid
+
+$(TMP_DIR)\tbcxUuid.h:	$(ROOT)\manifest.uuid
+	copy $(WIN_DIR)\tbcxUuid.h.in+$(ROOT)\manifest.uuid $(TMP_DIR)\tbcxUuid.h
+
+# The default install target only installs binaries and scripts so add
+# an additional target for our documentation. Note this *adds* a target
+# since no commands are listed after it. The original targets for
+# install (from targets.vc) will remain.
+install: default-install-docs-n
